--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,12 @@
 		<dependency>
 			<groupId>org.twitter4j</groupId>
 			<artifactId>twitter4j-core</artifactId>
-			<version>[2.2,)</version>
-			<scope>compile</scope>
+			<version>2.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-async</artifactId>
+			<version>2.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
